--- a/app/Views/Home/Index.cshtml
+++ b/app/Views/Home/Index.cshtml
@@ -2,7 +2,82 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+
+        <div class="field">
+            <label class="label">Name</label>
+            <div class="control">
+                <input class="input" type="text" placeholder="Hans Hansen">
+            </div>
+        </div>
+
+        <div class="field">
+            <label class="label">I want to date a...</label>
+            <div class="control">
+
+                <label class="radio">
+                <input type="radio" name="gender" value="true">
+                man
+                </label>
+                <label class="radio">
+                <input type="radio" name="gender" value="false">
+                woman
+                </label>
+            </div>
+        </div>
+
+
+        <div class="field">
+            <label class="label">Date of Birth (DD.MM.YYYY)</label>
+            <div class="control">
+                <input class="input" type="text" placeholder="25.12.1983">
+            </div>
+        </div>
+
+        <div class="field">
+            <label class="label">Zodiac Sign</label>
+            <div class="control">
+                <div class="select">
+                <select>
+                    <option disabled selected>Select zodiac sign</option>
+                    <option>Scorpio</option>
+                </select>
+                </div>
+            </div>
+        </div>
+
+        <div class="field">
+        <label class="label">Height (cm)</label>
+        <div class="control">
+            <input class="input" type="number" placeholder="" min="50" max="300">
+        </div>
+        </div>
+
+        <div class="field">
+        <label class="label">Hobbies (separate multiple using comma)</label>
+        <div class="control">
+            <input class="input" type="text" placeholder="Watching Star Wars, Playing the bass guitar">
+        </div>
+        </div>
+
+
+<div class="field">
+  <div class="control">
+    <label class="checkbox">
+      <input type="checkbox">
+      Try our new <i>improved</i> algorithm
+    </label>
+  </div>
+</div>
+
+
+<div class="field is-grouped">
+  <div class="control">
+    <button class="button is-link">Match me!</button>
+  </div>
+</div>
+
+    </div>
+
+
 </div>
