--- a/app/Views/Home/Index.cshtml
+++ b/app/Views/Home/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+ViewData["Title"] = "Home Page";
 }
 
 <div class="container">
-
+    <form name="UserModel" method="POST" action="/MatchPage">
         <div class="field">
             <label class="label">Name</label>
             <div class="control">
-                <input class="input" type="text" placeholder="Hans Hansen">
+                <input class="input" type="text" placeholder="Hans Hansen" name="Name">
             </div>
         </div>
 
@@ -16,12 +16,12 @@
             <div class="control">
 
                 <label class="radio">
-                <input type="radio" name="gender" value="true">
-                man
+                    <input type="radio" name="Gender" value="true">
+                    man
                 </label>
                 <label class="radio">
-                <input type="radio" name="gender" value="false">
-                woman
+                    <input type="radio" name="Gender" value="false">
+                    woman
                 </label>
             </div>
         </div>
@@ -30,7 +30,7 @@
         <div class="field">
             <label class="label">Date of Birth (DD.MM.YYYY)</label>
             <div class="control">
-                <input class="input" type="text" placeholder="25.12.1983">
+                <input class="input" type="text" placeholder="25.12.1983" name="DateOfBirth">
             </div>
         </div>
 
@@ -38,46 +38,45 @@
             <label class="label">Zodiac Sign</label>
             <div class="control">
                 <div class="select">
-                <select>
-                    <option disabled selected>Select zodiac sign</option>
-                    <option>Scorpio</option>
-                </select>
+                    <select name="ZodiacSign">
+                        <option disabled selected>Select zodiac sign</option>
+                        <option>Scorpio</option>
+                    </select>
                 </div>
             </div>
         </div>
 
         <div class="field">
-        <label class="label">Height (cm)</label>
-        <div class="control">
-            <input class="input" type="number" placeholder="" min="50" max="300">
-        </div>
+            <label class="label">Height (cm)</label>
+            <div class="control">
+                <input class="input" type="number" placeholder="" min="50" max="300" name="Height">
+            </div>
         </div>
 
         <div class="field">
-        <label class="label">Hobbies (separate multiple using comma)</label>
-        <div class="control">
-            <input class="input" type="text" placeholder="Watching Star Wars, Playing the bass guitar">
+            <label class="label">Hobbies (separate multiple using comma)</label>
+            <div class="control">
+                <input class="input" type="text" placeholder="Watching Star Wars, Playing the bass guitar" name="Hobby">
+            </div>
         </div>
+
+
+        <div class="field">
+            <div class="control">
+                <label class="checkbox">
+                    <input type="checkbox" name="Algorithm">
+                    Try our new <i>improved</i> algorithm
+                </label>
+            </div>
         </div>
 
 
-<div class="field">
-  <div class="control">
-    <label class="checkbox">
-      <input type="checkbox">
-      Try our new <i>improved</i> algorithm
-    </label>
-  </div>
-</div>
+        <div class="field is-grouped">
+            <div class="control">
+                <button class="button is-link">Match me!</button>
+            </div>
+        </div>
 
 
-<div class="field is-grouped">
-  <div class="control">
-    <button class="button is-link">Match me!</button>
-  </div>
-</div>
-
-    </div>
-
-
+    </form>
 </div>
