--- a/app/Views/Home/Index.cshtml
+++ b/app/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@ ViewData["Title"] = "Home Page";
 }
 
 <div class="container">
-    <form name="UserModel" method="POST" action="/MatchPage">
+    <form name="UserModel" method="POST" action="/Home/MatchPage">
         <div class="field">
             <label class="label">Name</label>
             <div class="control">
