--- a/app/Views/Shared/_Layout.cshtml
+++ b/app/Views/Shared/_Layout.cshtml
@@ -13,18 +13,24 @@
 <body>
 
   <nav class="navbar is-light" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="/">
-        <img src="~/keamatch.svg">
-      </a>
+      <div class="navbar-brand">
 
-      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-        data-target="navbarBasicExample">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
+          <ul class="navbar-nav flex-grow-1">
+              <li class="nav-item">
+                  <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MatchPage">matchPage</a>
+              </li>
+          </ul>
+              <a class="navbar-item" href="/">
+                  <img src="~/keamatch.svg">
+              </a>
+
+              <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+                 data-target="navbarBasicExample">
+                  <span aria-hidden="true"></span>
+                  <span aria-hidden="true"></span>
+                  <span aria-hidden="true"></span>
+              </a>
+      </div>
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
