--- a/app/Views/Home/Index.cshtml
+++ b/app/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@ ViewData["Title"] = "Home Page";
         <div class="field">
             <label class="label">Date of Birth (DD.MM.YYYY)</label>
             <div class="control">
-                <input class="input" type="text" placeholder="25.12.1983" name="DateOfBirth">
+                <input class="input" type="date" placeholder="25.12.1983" name="DateOfBirth">
             </div>
         </div>
 
@@ -42,9 +42,9 @@ ViewData["Title"] = "Home Page";
                         <option disabled selected>Select zodiac sign</option>
                         @foreach(ZodiacSign sign in Enum.GetValues(typeof(ZodiacSign)))
                         {
-<option>
-    @sign.ToString()
-</option>
+                            <option>
+                                @sign.ToString()
+                            </option>
                         }
                         
                     </select>
