--- a/app/Views/Home/Index.cshtml
+++ b/app/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@ ViewData["Title"] = "Home Page";
             <label class="label">Zodiac Sign</label>
             <div class="control">
                 <div class="select">
-                    <select name="ZodiacSign">
+                    <select name="Zodiac">
                         <option disabled selected>Select zodiac sign</option>
                         @foreach(ZodiacSign sign in Enum.GetValues(typeof(ZodiacSign)))
                         {
