--- a/app/Views/Shared/_Layout.cshtml
+++ b/app/Views/Shared/_Layout.cshtml
@@ -29,8 +29,16 @@
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
 
-        <a class="navbar-item">
-          Advanced Search
+        <a class="navbar-item" href="/">
+          Find a match
+        </a>
+
+        <a class="navbar-item" href="/Home/FindUsersPage">
+          Our users
+        </a>
+        
+        <a class="navbar-item" href="/Home/Privacy">
+          Privacy
         </a>
       </div>
 
