removed dob hint

--- a/app/Views/Home/Index.cshtml
+++ b/app/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@ ViewData["Title"] = "Home Page";
 
 
         <div class="field">
-            <label class="label">Date of Birth (DD.MM.YYYY)</label>
+            <label class="label">Date of Birth</label>
             <div class="control">
                 <input class="input" type="date" placeholder="25.12.1983" name="DateOfBirth">
             </div>
