--- a/app/Views/Home/MatchPage.cshtml
+++ b/app/Views/Home/MatchPage.cshtml
@@ -6,7 +6,7 @@ ViewData["Title"] = "Home Page";
 
 <div class="container">
     @{ 
-        List<UserModel> ResultsUsers = new AlgorithmsClass().DefaultAlgorythm(Model);
+        List<UserModel> ResultsUsers = new AlgorithmsClass().DefaultAlgorithm(Model);
 
         foreach (var user in ResultsUsers)
         {
