added new pages for test with selenium

--- a/app/Views/Shared/_Layout.cshtml
+++ b/app/Views/Shared/_Layout.cshtml
@@ -40,6 +40,14 @@
         <a class="navbar-item" href="/Home/Privacy">
           Privacy
         </a>
+        
+        <a class="navbar-item" href="/Home/About">
+          About
+        </a>
+        
+        <a class="navbar-item" href="/Home/Contact">
+                  Contact
+                </a>
       </div>
 
       <div class="navbar-end">
