bar visible in chrome

--- a/app/Views/Home/MatchPage.cshtml
+++ b/app/Views/Home/MatchPage.cshtml
@@ -13,7 +13,7 @@ ViewData["Title"] = "Home Page";
                 <tr>
                     <th>Rank</th>
                     <th>Name</th>
-                    <th></th>
+                    <th style="width: 60%;"></th>
                     <th>Percentage</th>
                 </tr>
             </thead>
