--- a/app/Views/Home/Index.cshtml
+++ b/app/Views/Home/Index.cshtml
@@ -16,11 +16,11 @@ ViewData["Title"] = "Home Page";
             <div class="control">
 
                 <label class="radio">
-                    <input type="radio" name="Gender" value="true">
+                    <input type="radio" name="Gender" value="Male">
                     man
                 </label>
                 <label class="radio">
-                    <input type="radio" name="Gender" value="false">
+                    <input type="radio" name="Gender" value="Female">
                     woman
                 </label>
             </div>
@@ -70,7 +70,7 @@ ViewData["Title"] = "Home Page";
         <div class="field">
             <div class="control">
                 <label class="checkbox">
-                    <input type="checkbox" name="Algorithm">
+                    <input type="checkbox" name="Algorithm" value="true">
                     Try our new <i>improved</i> algorithm
                 </label>
             </div>
