changed DoB to Age

--- a/app/Views/Home/FindUsersPage.cshtml
+++ b/app/Views/Home/FindUsersPage.cshtml
@@ -12,7 +12,7 @@ ViewData["Title"] = "Find Users Page";
         <div class="card" style="height: 100%">
            <div class="card-content">
             <p class="title is-bold">@user.Name</p>
-            <p>Born in   : @user.DateOfBirth.Day/@user.DateOfBirth.Month - @user.DateOfBirth.Year</p>
+            <p>Age       : @user.Age</p>
             <p>Hobby     : @user.Hobby </p>
             <p>Height    : @user.Height cm </p>
             <p>Star Sign : @user.Zodiac </p>
