--- a/app/Views/Home/Index.cshtml
+++ b/app/Views/Home/Index.cshtml
@@ -28,9 +28,9 @@ ViewData["Title"] = "Home Page";
 
 
         <div class="field">
-            <label class="label">Date of Birth</label>
+            <label class="label">Age</label>
             <div class="control">
-                <input class="input" type="date" placeholder="25.12.1983" name="DateOfBirth">
+                 <input class="input" type="number" placeholder="" min="18" max="120" name="Age">
             </div>
         </div>
 
