--- a/app/Views/Home/FindUsersPage.cshtml
+++ b/app/Views/Home/FindUsersPage.cshtml
@@ -22,7 +22,7 @@ ViewData["Title"] = "Find Users Page";
       </div>    
     }
     </div>
-    <div class="buttons is-centered"><a class="button is-primary" href="#" data-config-id="primary-action">Back to Main Page</a></div>
+    <div class="buttons is-centered"><a class="button is-primary" href="./" data-config-id="primary-action">Back to Main Page</a></div>
   </div>
 </div>
 
